--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,18 @@
+/*--------------------------------------------------------------------*/
+/*react CSS*/
 .App {
   text-align: center;
 }
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
-.App-header {
+/*.App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -22,12 +21,10 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
+}*/
 .App-link {
   color: #61dafb;
 }
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +32,100 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+/*--------------------------------------------------------------------*/
+/*CUSTOM CSS*/
+.logo { width: 5vmin; }
+.bg-trans { background-color: transparent; }
+.section-a {
+  height: 100vh;
+  position: relative;
+  background-image: url('./img/p1.png');
+  background-position: center center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+}
+
+
+/*--------------------------------------------------------------------*/
+/*material-ui CSS*/
+.MuiAppBar-colorPrimary {
+  background-color: transparent !important;
+}
+.MuiBox-root-219 {
+  background-color: transparent !important;
+}
+
+
+/*--------------------------------------------------------------------*/
+/* menu item hove effect*/
+.container--menuitem {
+  /*width: 100%;*/
+  padding: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.link {
+  outline: none;
+  text-decoration: none;
+  position: relative;
+  font-size: 5em;
+  line-height: 1;
+  color: #000000;
+  display: inline-block;
+}
+.link--menuitem {
+  font-style: italic;
+  font-weight: 700;
+  font-size: 2em;
+  padding: 0 10px 20px;
+  -webkit-transition: color 0.5s;
+  transition: 0.5s;
+  z-index: 0;
+}
+.link--menuitem:hover {
+  color: #ffffff;
+}
+.link--menuitem:hover::before {
+  -webkit-transform: rotate3d(0,0,1,135deg) scale3d(1,1,1);
+  transform: rotate3d(0,0,1,135deg) scale3d(1,1,1);
+}
+.link--menuitem:hover span {
+  opacity: 1;
+  -webkit-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
+}
+.link--menuitem::before {
+  content: '';
+  position: absolute;
+  height: 1px;
+  width: 120%;
+  top: 70%;
+  margin-top: -18px;
+  left: -10%;
+  z-index: -1;
+  background: #000000;
+  -webkit-transform: rotate3d(0,0,1,45deg) scale3d(0,1,1);
+  transform: rotate3d(0,0,1,45deg) scale3d(0,1,1);
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: transform 0.5s;
+}
+.link--menuitem span {
+  font-size: 50%;
+  font-weight: 400;
+  position: absolute;
+  right: 15px;
+  color: #E53369;
+  bottom: 0;
+  opacity: 0;
+  -webkit-transform: translate3d(-10px, -10px, 0);
+  transform: translate3d(-10px, -10px, 0);
+  -webkit-transition: -webkit-transform 0.5s, opacity 0.5s;
+  transition: transform 0.5s, opacity 0.5s;
 }
