--- a/src/App.css
+++ b/src/App.css
@@ -81,10 +81,7 @@ body {
 .section-3-head { background-image: url('./img/p3.jpg'); }
 .section-2-body { margin-bottom: 150px; }
 .section-3-body {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin: 50px 30px;
+
 }
 .card-container {
     display: flex;
@@ -100,6 +97,11 @@ h2 p { margin:0px; }
   font-size: 1.5rem;
   font-weight: 400;
   margin-bottom: 0px;
+}
+.p-abs {
+  position:  absolute;
+  top: 0;
+  left: 0;
 }
 
 @keyframes animatedRtL {
@@ -241,6 +243,10 @@ h2 p { margin:0px; }
   0%   { width : 0%; }
   100% { width: 250%; }
 }
+@keyframes strikeBook {
+  0%   { width : 0%; }
+  100% { width: 160%; }
+}
 .strike {
   position: relative;
   /*margin: 10px;*/
@@ -248,13 +254,13 @@ h2 p { margin:0px; }
 .strike::after {
   content: ' ';
   position: absolute;
-  height: 2px;
+  height: 5px;
   width: 100%;
   background: rgba(0, 0, 0, 0.87);
   animation-duration: 3s;
   animation-timing-function: ease-in;
   animation-iteration-count: 1;
-  animation-fill-mode: forwards; 
+  animation-fill-mode: forwards;  
 }
 .strike-A::after {
   animation-name: strikeA;
@@ -333,5 +339,15 @@ h2 p { margin:0px; }
   color: #000000 !important;
 }
 
+.strike-Con::after {
+  animation-name: strikeCon;
+  top: 48%; 
+  left: -400%;
+  
+}
+@keyframes strikeCon {
+  0%   { width : 0%; }
+  100% { width: 101vw; }
+}
 /*--------------------------------------------------------------------*/
 /* menu item hove effect*/
