--- a/src/App.css
+++ b/src/App.css
@@ -90,9 +90,9 @@ body {
     justify-content: space-around;
     margin: 50px 30px;
 }
-.card-container > div {
+/*.card-container > div {
   flex: 1 0 50%
-}
+}*/
 
 h2 p { margin:0px; }
 
@@ -245,7 +245,7 @@ h2 p { margin:0px; }
 }
 @keyframes strikeE {
   0%   { width : 0; }
-  100% { width: 125%; }
+  100% { width: 126%; }
 }
 @keyframes strikeC {
   0%   { width : 100%; }
@@ -290,7 +290,7 @@ h2 p { margin:0px; }
 .strike-E::after {
   animation-name: strikeE;
   height: 10px;
-  top: 49%; 
+  top: 46.5%; 
   left: -120%;
 }
 .strike-C::after {
@@ -302,18 +302,18 @@ h2 p { margin:0px; }
 .strike-A3::after {
   animation-name: 'strikeA3';
   animation-delay: 1s;
-  height: 10px;
+  height: 9px;
   width:0;
   top: 57%;
-  left: 30%; 
+  left: 29%; 
 }
 .strike-m::after {
   animation-name: 'strikeM';
   animation-delay: 1s;
   width:0;
   height:1px;
-  top: 28%;
-  left: 99%; 
+  top: 27.5%;
+  left: 98%; 
 }
 
 .after-strike {
@@ -381,11 +381,14 @@ h2 p { margin:0px; }
   .section-head {
     height: 100%;
   }
-  .strike::after {
-    height: 1px; 
+  .card-container {
+    margin: 50px 5px;
   }
-  
+  .strike::after {
+    /*height: 1px; */
+  } 
   .strike-Con::after {
+    height: 3px !important;
     left: 0% !important;
   }
   @keyframes strikeCon {
@@ -397,7 +400,7 @@ h2 p { margin:0px; }
     100% { width: 450%; }
   }
   .strike-A::after {
-    height: 10px !important;
+    height: 5px !important;
     top: 56%;
     left: 21%; 
   }
@@ -406,8 +409,8 @@ h2 p { margin:0px; }
     100% { width: 120%; }
   }
   .strike-E::after {
-    height: 10px;
-    top: 46.4%; 
+    height: 5px;
+    top: 46.9%; 
     left: -50%;
   }
   @keyframes strikeE {
@@ -459,5 +462,29 @@ h2 p { margin:0px; }
   @keyframes strikeM {
     0%   { width : 0%; }
     100% { width: 133%; }
+  }
+}
+
+@media (max-width:960px) {
+  .section-head {
+    height: 100%;
+  }
+
+  .strike-E::after {
+    height: 5px;
+    top: 47.5%; 
+    left: -50%;
+  }
+  @keyframes strikeE {
+    0%   { width : 0; }
+    100% { width: 300%; }
+  }
+  .strike-C::after {
+    height: 4px;
+    top: 50%; 
+    left: -150%;
+  }
+  .after-strike {   
+    top: 30%;
   }
 }
